dynamic layout bug removed (illionas)

--- a/static/style.css
+++ b/static/style.css
@@ -693,7 +693,6 @@ div.notifications {
   text-decoration: none;
   padding: 5px;
   border-radius: 0px 5px 0px 5px;
-  margin-bottom: -100%;
 }
 
 .delegation_arrow {
